@@ -1,8 +1,10 @@
-$Id: ChangeLog 4204 2016-01-22 13:52:06Z samm2 $
+$Id: ChangeLog 4205 2016-01-22 15:22:53Z samm2 $
 
 2016-01-21  Alex Samorukov <samm@os2.kiev.ua>
 
 	drivedb.h: Added ADATA SP550 SSD (ticket #638)
+	os_freebsd.cpp: Reduce variable scope where possible (cppcheck: variableScope)
+	os_openbsd/os_netbsd - removed never used warning code defines (cppcheck)
 
 2016-01-21  Christian Franke  <franke@computer.org>
 
